Added WebSocket demo
